--- a/pixi.toml
+++ b/pixi.toml
@@ -40,6 +40,10 @@ tensorboard = "*"
 json5 = ">=0.12.1"
 polars = ">=1.33.1"
 pydantic = ">=2.0,<3"
+mdanalysis = "*"             # Required by yammbs
+
+[feature.fit.pypi-dependencies]
+yammbs = { git = "https://github.com/openforcefield/yammbs.git", rev = "4f88e07" }
 
 [feature.ptm.dependencies]
 # Pablo deps
